project card changes